--- a/jevelin-angular/angular.json
+++ b/jevelin-angular/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "jevelin-angular"
+    }
+  },
+  "defaultProject": "jevelin-angular",
+  "cli": {
+    "analytics": false
+  }
 }
