--- a/quarantine-angular/angular.json
+++ b/quarantine-angular/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "jevelin-angular": {
+    "quarantine-angular": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/jevelin-angular",
+            "outputPath": "dist/quarantine-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "jevelin-angular:build"
+            "browserTarget": "quarantine-angular:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "jevelin-angular:build:production"
+              "browserTarget": "quarantine-angular:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "jevelin-angular:build"
+            "browserTarget": "quarantine-angular:build"
           }
         },
         "test": {
@@ -114,18 +114,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "jevelin-angular:serve"
+            "devServerTarget": "quarantine-angular:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "jevelin-angular:serve:production"
+              "devServerTarget": "quarantine-angular:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "jevelin-angular",
+  "defaultProject": "quarantine-angular",
   "cli": {
     "analytics": false
   }
